horizontal scroll fix

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,7 +4,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  padding: 15px;
+  padding: 15px 0;
   color: #f1f1f1;
 }
 
