--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -6,6 +6,7 @@
 
 .nav-bar__container {
   display: flex;
+  padding: 0;
   justify-content: space-between;
   align-items: center;
 }
